# proiect1_poo

./: CMakeLists.txt  README.md  README_build.txt  auction_exceptions.h  auction_house.cpp  auction_house.h  auction_participant.h  bot.cpp  bot.h  item.cpp  item.h  lista.cpp  lista.h  main_sfml.cpp  obiecte.txt  player.cpp  player.h  proiect copy.cpp  proiect.cpp  rng.h
